--- a/Shop Search/style.css
+++ b/Shop Search/style.css
@@ -3,17 +3,19 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  /* overflow-x: hidden; */
 }
 body {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   background-color: #a2bcfe;
+  overflow-x: hidden;
 }
 #container {
   width: 100%;
-  height: 92vh;
+  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -75,6 +77,25 @@ body {
 h3 {
   font-size: 14px;
 }
+.crossDiv{
+  background-color: #fff;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+}
+.remove-item{
+  color: red;
+  font-size: 16px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.crossDiv:hover{
+  transform: scale(1.1); 
+}
 .textBlock {
   display: flex;
   flex-direction: row;
@@ -100,10 +121,10 @@ h3 {
   border: none;
   padding-top: 5px;
   padding-bottom: 5px;
-  margin-left: 20px;
+  margin: 0 20px;
   color: black;
   font-weight: 900;
-  font-size: 15px;
+  font-size: 12px;
   width: 150px;
   height: 30px;
   margin-bottom: 5px;
@@ -121,4 +142,19 @@ h3 {
 }
 .isHidden {
   display: none;
+}
+
+.loader{
+  width:150px;
+  height:150px;
+  border:20px solid transparent;
+  border-top:20px solid #1c1c1c;
+  border-bottom:20px solid #1c1c1c;
+  border-radius:50%;
+  animation:rotate 1s linear infinite;
+}
+
+@keyframes rotate{
+   from {transform:rotate(0deg);}
+  to{transform:rotate(360deg);}
 }
