--- a/Shop Search/style.css
+++ b/Shop Search/style.css
@@ -9,9 +9,17 @@ body {
   width: 100vw;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   background-color: #a2bcfe;
   overflow-x: hidden;
+}
+.header{
+  width: 90vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
 #container {
   width: 100%;
@@ -25,12 +33,12 @@ body {
 }
 
 .search {
-  width: 100vw;
+  width: 95vw;
   height: 50px;
   margin-top: 20px;
   display: flex;
-  position: relative;
-  justify-content: center;
+  justify-content: flex-start;
+  margin-left: 50px;
 }
 
 .search .input {
@@ -40,19 +48,53 @@ body {
   font-size: 18px;
   padding: 15px;
   height: 50px;
-  max-width: 600;
+  width: 80vw;
 }
 
+.cart-icon{
+  color: #fff;
+  font-size: 35px;
+  /* transform: translateX(155px); */
+  transition: all 0.2s ease-in;
+  margin-top: 5px;
+  margin-left: auto;
+  z-index: 0;
+}
+.cart-icon:hover{
+  transform: scale(1.5);
+}
+
+.badge {
+  padding-left: 9px;
+  padding-right: 9px;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  border-radius: 9px;
+  z-index: 5;
+}
+
+.label-warning[href],
+.badge-warning[href] {
+  background-color: #c67605;
+}
+#lblCartCount {
+    font-size: 18px;
+    background: #ff0000;
+    color: #fff;
+    padding: 0 5px;
+    vertical-align: top;
+    margin-left: -10px; 
+    margin-top: -10px; 
+}
 .btn {
   background: #fff;
   border: 0;
   cursor: pointer;
   font-size: 24px;
   border-radius: 20px;
-  position: absolute;
   height: 50px;
   width: 50px;
-  transform: translateX(205px);
+  transform: translateX(-35px);
 }
 
 .btn:focus,
@@ -145,11 +187,11 @@ h3 {
 }
 
 .loader{
-  width:150px;
-  height:150px;
-  border:20px solid transparent;
-  border-top:20px solid #1c1c1c;
-  border-bottom:20px solid #1c1c1c;
+  width:100px;
+  height:100px;
+  border:10px solid transparent;
+  border-top:10px solid #1c1c1c;
+  border-bottom:10px solid #1c1c1c;
   border-radius:50%;
   animation:rotate 1s linear infinite;
 }
